--- a/style/style.css
+++ b/style/style.css
@@ -7,4 +7,43 @@
 html, body{
     width: 100%;
     height: 100%;
+    background-color: #F5F5F4;
+}
+
+.container{
+    max-width: 60%;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+    background-color: red;
+}
+
+.box-wrapper{
+    padding: 4rem;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.box-grid{
+    display: flex;
+    /* gap: 20px; */
+    align-items: center;
+    justify-content: space-between;
+}
+
+.box{
+    background: #000;
+    height: 200px;
+    width: 350px;
+    border-radius: 20px;
+}
+
+.sm-box{
+    width: 180px;
+}
+
+.mid-content{
+    text-align: center;
 }
