--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,10 @@ html, body{
 }
 
 body{
-    background-color: #F5F5F4;
+    background-color: #f5f5f4;
     /* cursor: none; */
     overflow: hidden;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 .cursor {
@@ -59,7 +60,7 @@ body{
     width: 100%;
     height: 100vh;
     margin: auto;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .box-wrapper{
@@ -113,4 +114,15 @@ body{
 
 .mid-content{
     text-align: center;
+}
+
+.mid-content h1{
+    font-size: 7rem;
+    font-weight: 900;   
+    text-transform: uppercase;
+}
+.mid-content p{
+    font-size: 2.2rem;
+    font-weight: 900;
+    color: #A6ADBB;
 }
