--- a/style/style.css
+++ b/style/style.css
@@ -73,8 +73,8 @@ body{
 
 .box-grid{
     display: flex;
-    /* gap: 20px; */
-    justify-content: space-between;
+    gap: 30px;
+    /* justify-content: space-between; */
 }
 
 .upper-box-grid{
@@ -91,26 +91,27 @@ body{
     width: 374px;
     border-radius: 20px;
     border: 4px solid #fff;
-    transform: rotate(-3deg);
+    transform: rotate(-2deg);
     transition: all ease 0.3s;
 }
 
-.box:hover{
+.box-grid .box:hover{
     transform: rotate(0deg);
-    transition: all ease 0.2s;
+    transition: all ease 0.3s;
 }
 
 .sm-box{
     width: 168px;
     height: 185px;
-    transform: rotate(-2deg);
-    transition: all ease 0.2s;
+    transform: rotate(-4deg);
+    transition: all ease 0.3s;
 }
 
-.sm-box:hover{
-    transform: rotate(0deg);
-    transition: all ease 0.2s;
+.box-grid .bx{
+    transform: rotate(2deg);
+    transition: all ease 0.3s;
 }
+
 
 .mid-content{
     text-align: center;
