--- a/style/style.css
+++ b/style/style.css
@@ -573,9 +573,6 @@ body {
   align-items: center;
   margin-bottom: 25px;
   font-weight: bold;
-}
-
-.drawer-header i:hover {
   color: #F472B6;
 }
 
@@ -583,16 +580,11 @@ body {
   text-decoration: none;
   font-weight: bold;
   font-size: 17px;
-  color: #000;
-}
-
-.drawer-header a:hover {
-  color: #ec4899;
+  color: #F472B6;
 }
 
 .close-btn {
   font-size: 24px;
-  color: #475569;
   cursor: pointer;
 }
 
@@ -604,6 +596,8 @@ body {
   transition: all 0.3s ease;
   gap: 20px;
   align-items: baseline;
+   background-color: #FBCFE8;
+    box-shadow: 0 4px 24px 0 rgba(236, 72, 153, 0.15);
 }
 
 .exp-date {
@@ -611,7 +605,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #a855f7;
+  color: #1d4ed8;
 }
 
 .exp-body h3 {
@@ -622,7 +616,7 @@ body {
 
 .exp-body p {
   font-size: 17px;
-  color: #334155;
+  color: #1d4ed8;
   margin-bottom: 10px;
   font-weight: 300;
 }
@@ -636,8 +630,7 @@ body {
 
 .tags span {
   background-color: #fff;
-  border: 1px solid rgb(108, 105, 105);
-  color: rgb(108, 105, 105);
+  color: #0077B5;
   border-radius: 999px;
   padding: 5px 12px;
   font-size: 15px;
@@ -691,74 +684,6 @@ body {
 
 /* Responsive Design */
 
-@media (min-width: 767px) {
-  .about-card {
-    background-color: #f5f5f4;
-    transform: rotate(-2deg);
-  }
-
-  .about-card:hover {
-    background-color: #e0f2fe;
-    transform: rotate(0deg);
-  }
-}
-
-@media (min-width: 767px) {
-  .avatar {
-    filter: grayscale(100%);
-    transform: scale(1);
-  }
-
-  .about-card:hover .avatar {
-    filter: grayscale(0);
-    transform: scale(1.2);
-  }
-}
-
-@media (min-width: 767px) {
-
-  .name,
-  .role {
-    color: inherit;
-  }
-
-  .about-card:hover .name,
-  .about-card:hover .role {
-    color: #0284c7;
-  }
-}
-
-@media (min-width: 767px) {
-  .about-description {
-    color: inherit;
-  }
-
-  .about-card:hover .about-description {
-    color: #0284c7;
-  }
-}
-
-@media (min-width: 767px) {
-  .custom-card {
-    background-color: #f5f5f4;
-    rotate: 1deg;
-  }
-
-  .custom-card:hover {
-    background-color: #FFF1F2;
-    rotate: 0deg;
-  }
-}
-
-@media (min-width: 767px) {
-  .custom-card-subtitle {
-    color: inherit;
-  }
-
-  .custom-card:hover .custom-card-subtitle {
-    color: rgb(97, 4, 27);
-  }
-}
 
 @media (min-width: 767px) {
 
@@ -898,15 +823,63 @@ body {
   .custom-card-box:hover .custom-card-img {
     filter: grayscale(0%);
   }
-}
 
-@media (min-width: 767px) {
+  .avatar {
+    filter: grayscale(100%);
+    transform: scale(1);
+  }
+
+  .about-card:hover .avatar {
+    filter: grayscale(0);
+    transform: scale(1.2);
+  }
+
+  .name,
+  .role {
+    color: inherit;
+  }
+
+  .about-card:hover .name,
+  .about-card:hover .role {
+    color: #0284c7;
+  }
+
+  .about-description {
+    color: inherit;
+  }
+
+  .about-card:hover .about-description {
+    color: #0284c7;
+  }
+
+  .custom-card {
+    background-color: #f5f5f4;
+    rotate: 1deg;
+  }
+
+  .custom-card:hover {
+    background-color: #FFF1F2;
+    rotate: 0deg;
+  }
+
+  .custom-card-subtitle {
+    color: inherit;
+  }
+
+  .custom-card:hover .custom-card-subtitle {
+    color: rgb(97, 4, 27);
+  }
 
   .exp-block .exp-date,
   .exp-body h3,
   .exp-body p,
   .tags span {
     color: rgb(108, 105, 105);
+  }
+
+  .exp-block{
+    box-shadow: none;
+    background: none;
   }
 
   .exp-block:hover {
@@ -934,6 +907,37 @@ body {
     border: none;
     color: #1d4ed8;
     transition: 0.4s;
+  }
+
+  .about-card {
+    background-color: #f5f5f4;
+    transform: rotate(-2deg);
+  }
+
+  .about-card:hover {
+    background-color: #e0f2fe;
+    transform: rotate(0deg);
+  }
+
+  .drawer-header i {
+    color: #475569;
+  }
+
+  .drawer-header a:hover {
+    color: #ec4899;
+  }
+
+  .drawer-header a {
+    color: #475569;
+  }
+
+  .drawer-header i:hover {
+    color: #F472B6;
+  }
+
+  .tags span {
+    color: rgb(108, 105, 105);
+    border: 1px solid rgb(108, 105, 105);
   }
 }
 
@@ -1019,10 +1023,15 @@ body {
     padding: 12px 16px;
     grid-template-columns: repeat(1, 1fr);
   }
+
+  .exp-block{
+    flex-direction: column;
+  }
 }
 
-@media (max-width: 400px){
-    .custom-card-subtitle,
+@media (max-width: 400px) {
+
+  .custom-card-subtitle,
   .about-description {
     font-size: 13.75px;
   }
