Border issue resolved

--- a/style/style.css
+++ b/style/style.css
@@ -585,6 +585,7 @@ body {
   align-items: baseline;
   background-color: #FBCFE8;
   box-shadow: 0 4px 24px 0 rgba(236, 72, 153, 0.15);
+  border: none;
 }
 
 .exp-date {
